maybe I didnt need to mess with the path?

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
     <script type="text/javascript">
       var slideshow = remark.create({
-        sourceUrl: 'design_patterns_slides/slides.md'
+        sourceUrl: 'slides.md'
       });
     </script>
   </body>
